Update /Knitwits urls to /Members

--- a/ODK.Web.Razor/Views/Shared/Header/_ChapterHeader.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_ChapterHeader.cshtml
@@ -10,7 +10,7 @@
 
     if (isMember)
     {
-        menuItems.Add(new MenuItem { Text = "Knitwits", Link = $"/{Model.Chapter.Name}/Knitwits" });
+        menuItems.Add(new MenuItem { Text = "Knitwits", Link = $"/{Model.Chapter.Name}/Members" });
     }
 
     menuItems.Add(new MenuItem { Text = "Contact", Link = $"/{Model.Chapter.Name}/Contact" });
