--- a/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
@@ -31,7 +31,7 @@
                                 MaxWidth = 50
                             })
                             <span class="ms-2">
-                                <a href="/@Model.Chapter.Name/Knitwits/@host.Id" target="_blank">@host.FullName</a>
+                                <a href="/@Model.Chapter.Name/Members/@host.Id" target="_blank">@host.FullName</a>
                             </span>
                         </div>
                     }
