--- a/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
@@ -4,14 +4,14 @@
 @using ODK.Web.Razor.Models.Account
 @model ForgottenPasswordModel
 @{
-    Layout = "Shared/_HomeLayout";
+    Layout = "_HomeLayout";
     Model.Title = "Forgotten password";
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
     Title = "Forgotten password",
-    Content = await Html.PartialAsync("Account/_ForgottenPasswordForm", new ForgottenPasswordFormViewModel()),
+    Content = await Html.PartialAsync("Account/_SiteForgottenPasswordContent"),
     Breadcrumbs = new[]
     {
         new MenuItem { Link = "/Account/Login", Text = "Login" },
