--- a/ODK.Web.Razor/Pages/Account/Activate.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Activate.cshtml
@@ -2,7 +2,7 @@
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.Account.ActivateModel
 @{
-    Layout = "Shared/_HomeLayout";
+    Layout = "_HomeLayout";
     Model.Title = "Activate account";          
 }
 
