--- a/ODK.Web.Razor/Pages/Account/Login.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Login.cshtml
@@ -3,14 +3,14 @@
 @using ODK.Web.Razor.Models.Login
 @model LoginModel
 @{
-    Layout = "../Shared/_HomeLayout";
+    Layout = "_HomeLayout";
     Model.Title = "Login";
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
     Title = "Login",
-    Content = await Html.PartialAsync("Account/_LoginForm", new LoginViewModel
+    Content = await Html.PartialAsync("Account/_SiteLoginContent", new LoginViewModel
     {
         ReturnUrl = Model.ReturnUrl
     })
