--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
@@ -1,7 +1,11 @@
 ﻿@using ODK.Core.Chapters
 @using ODK.Services.Chapters
 @using ODK.Services.Users.ViewModels
+@using ODK.Web.Common.Extensions
 @model ChapterJoinPageViewModel
+@{
+    var memberId = User.MemberIdOrDefault();
+}
 
 @if (!string.IsNullOrEmpty(Model.Texts?.RegisterText))
 {
@@ -13,6 +17,11 @@
 <form method="post" action="/@Model.ChapterName/Account/Join" enctype="multipart/form-data">
     @Html.AntiForgeryToken()
     
+    @if (memberId == null)
+    {
+        @await Html.PartialAsync("Account/_PersonalDetailsForm", new PersonalDetailsFormViewModel());
+    }    
+
     @await Html.PartialAsync("Account/_ChapterProfileForm", Model.Profile)
     
     <button type="submit" class="btn btn-primary">Create</button>
