--- a/ODK.Web.Razor/Views/Shared/Members/_MemberAvatar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberAvatar.cshtml
@@ -1,6 +1,7 @@
-﻿@model ODK.Web.Razor.Models.Members.MemberAvatarViewModel
+﻿@using ODK.Web.Common.Routes
+@model ODK.Web.Razor.Models.Members.MemberAvatarViewModel
 @{
-    var imageUrl = $"/{Model.ChapterName}/Members/{Model.Member.Id}/Avatar";
+    var imageUrl = OdkRoutes.Members.Avatar(Model.Member.Id, Model.ChapterName); ;
     var maxWidth = Model.MaxWidth > 0 ? Model.MaxWidth : 75;
 }
 
