--- a/ODK.Web.Razor/Views/Shared/Members/_MemberProfile.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_MemberProfile.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Core.Chapters
+@using ODK.Core.Extensions
 @using ODK.Core.Members
 @using ODK.Services.Members
 @using ODK.Services.Members.ViewModels
@@ -46,7 +47,7 @@
     <div class="form-group mb-3">
         <label class="form-label">Date joined</label>
         <div class="form-control-plaintext">
-            <span>@Model.Chapter.ToChapterTime(joined).ToString("d MMMM yyyy")</span>
+            <span>@TimeZoneEntityExtensions.ToLocalTime(Model.Chapter, joined).ToString("d MMMM yyyy")</span>
         </div>
     </div>
 </form>
