--- a/ODK.Web.Razor/Views/Shared/Members/_SubscriptionAlert.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Members/_SubscriptionAlert.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Core.Members
+﻿@using ODK.Core.Extensions
+@using ODK.Core.Members
 @using ODK.Services.Authorization
 @using ODK.Services.Caching
 @using ODK.Web.Common.Extensions
@@ -54,7 +55,7 @@
     }
     else if (status == SubscriptionStatus.Expiring && memberSubscription.ExpiresUtc != null)
     {
-        var expiresOn = chapter.ToChapterTime(memberSubscription.ExpiresUtc.Value).ToString("d MMMM");
+        var expiresOn = TimeZoneEntityExtensions.ToLocalTime(chapter, memberSubscription.ExpiresUtc.Value).ToString("d MMMM");
         <div class="mt-3 alert alert-warning">
             Your @type expires @expiresOn <a href="/@chapter.Name/Account/Subscription">@action</a>
         </div>
