--- a/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangePassword.cshtml
@@ -1,23 +1,21 @@
-﻿@page "/{chapterName}/Account/Password/Change"
+﻿@page "/Account/Password/Change"
 @attribute [Authorize]
-@using Microsoft.AspNetCore.Authorization
-@using ODK.Web.Common.Components
-@using ODK.Web.Common.Routes
-@using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
-@model ODK.Web.Razor.Pages.Chapters.Account.ChangePasswordModel
+@using ODK.Web.Common.Components
+@using ODK.Web.Razor.Models.Account
+@using Microsoft.AspNetCore.Authorization
+@model ODK.Web.Razor.Pages.Account.ChangePasswordModel
 @{
-    Layout = "_ChapterLayout";
+    Layout = "_HomeLayout";
     Model.Title = "Change password";
 }
 
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
-    Title = "Account",    
+    Title = "Account",
     Content = await Html.PartialAsync("Account/_SiteAccountLayout", new SiteAccountLayoutViewModel
     {
-        Active = OdkRoutes.Account.PasswordChange(Model.Chapter.Name),
-        ChapterName = Model.Chapter.Name,
+        Active = "/Account/Password/Change",
         Content = 
             @<div>
                 @await Html.PartialAsync("Account/_ChangePasswordContent")
