--- a/ODK.Web.Razor/Views/Shared/Account/_ChangePasswordContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChangePasswordContent.cshtml
@@ -1,7 +1,6 @@
 ﻿@using ODK.Web.Razor.Models.Account
-@model ODK.Web.Razor.Models.Account.ChangePasswordContentViewModel
 
-<form method="post" action="/@Model.Chapter.Name/Account/Password/Change">
+<form method="post" action="/Account/Password/Change">
     @Html.AntiForgeryToken()
     @await Html.PartialAsync("Account/_ChangePasswordForm", new ChangePasswordFormViewModel())
     <button type="submit" class="btn btn-primary">Update</button>
