--- a/ODK.Web.Razor/Views/Shared/Components/_Body.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Body.cshtml
@@ -31,6 +31,11 @@
             {
                 @Model.Content
             }
+
+            @if (Model.ContentFunc != null)
+            {
+                @Model.ContentFunc(null)
+            }
         </div>
     </section>
 </main>
