--- a/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
@@ -12,7 +12,11 @@
                 <a class="dropdown-item" href="/@Model.MemberChapter.Name/Account">My profile</a>
                 <a class="dropdown-item" href="/@Model.MemberChapter.Name">@Model.MemberChapter.Name</a>
                 <a class="dropdown-item" href="/@Model.MemberChapter.Name/Account/Logout">Sign Out</a>
-            
+
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" data-theme-selector="dark">Dark mode</a>
+                <a class="dropdown-item" href="#" data-theme-selector="light">Light mode</a>
+
                 @if (User.IsInRole(OdkRoles.Admin))
                 {
                     <div class="dropdown-divider"></div>
