--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
@@ -8,6 +8,10 @@
             <div class="dropdown-menu dropdown-menu-end">
                 <a class="dropdown-item" href="/Account">My profile</a>
                 <a class="dropdown-item" href="/Groups">My groups</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" data-theme-selector="dark">Dark mode</a>
+                <a class="dropdown-item" href="#" data-theme-selector="light">Light mode</a>
+                <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/Account/Logout">Sign Out</a>
             </div>
         </div>
