--- a/ODK.Web.Razor/Pages/SuperAdmin/FeatureCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/FeatureCreate.cshtml
@@ -1,7 +1,7 @@
-﻿@page "/{chapterName}/Admin/SuperAdmin/Features/Create"
+﻿@page "/SuperAdmin/Features/Create"
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
-@model ODK.Web.Razor.Pages.Chapters.SuperAdmin.FeatureCreateModel
+@model FeatureCreateModel
 @{
     Layout = "SuperAdmin/_SuperAdminLayout";
     Model.Title = "Create feature | SuperAdmin";
@@ -11,8 +11,8 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = $"/{Model.Chapter.Name}/Admin/SuperAdmin/Features", Text = "Features" },
+        new MenuItem { Link = "/SuperAdmin/Features", Text = "Features" },
         new MenuItem { Text = "Create" }
     },
-    Content = await Html.PartialAsync("SuperAdmin/_FeatureCreateContent", Model.Chapter)
+    Content = await Html.PartialAsync("SuperAdmin/_FeatureCreateContent")
 })
