--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsTable.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsTable.cshtml
@@ -17,7 +17,7 @@
         {
             <tr>
                 <td>
-                    <a href="/@Model.Name/Admin/SuperAdmin/Emails/@email.Type">
+                    <a href="/SuperAdmin/Emails/@email.Type">
                         @email.Type
                     </a>
                 </td>
