--- a/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
+++ b/ODK.Web.Razor/Pages/SuperAdmin/Email.cshtml
@@ -1,8 +1,8 @@
-﻿@page "/{chapterName}/Admin/SuperAdmin/Emails/{type}"
+﻿@page "/SuperAdmin/Emails/{type}"
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.SuperAdmin
-@model ODK.Web.Razor.Pages.Chapters.SuperAdmin.EmailModel
+@model EmailModel
 @{
     Layout = "SuperAdmin/_SuperAdminLayout";
     Model.Title = "Edit email | SuperAdmin";
@@ -12,8 +12,8 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = $"/{Model.Chapter.Name}/Admin/SuperAdmin/Emails", Text = "Emails" },
+        new MenuItem { Link = $"/SuperAdmin/Emails", Text = "Emails" },
         new MenuItem { Text = Model.Email.Type.ToString() }
     },
-    Content = await Html.PartialAsync("SuperAdmin/_EmailContent", new EmailContentViewModel(Model.Chapter, Model.Email))
+    Content = await Html.PartialAsync("SuperAdmin/_EmailContent", new EmailContentViewModel(Model.Email))
 })
