--- a/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AccountMenu.cshtml
@@ -29,7 +29,7 @@
                     if (Model.CurrentChapter != null && Model.CurrentChapter.Id != Model.MemberChapter.Id)
                     {
                         <a class="dropdown-item" href="/@Model.CurrentChapter.Name/Admin/Chapter/Text">@Model.CurrentChapter.Name admin</a>
-                    }
+                    }                    
 
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="/@Model.MemberChapter.Name/Admin/SuperAdmin">@Model.MemberChapter.Name Super admin</a>
@@ -38,6 +38,9 @@
                     {
                         <a class="dropdown-item" href="/@Model.CurrentChapter.Name/Admin/SuperAdmin">@Model.CurrentChapter.Name Super admin</a>
                     }
+
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/SuperAdmin">Site admin</a>
                 }
             </div>
         </div>
