--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
@@ -1,4 +1,5 @@
-﻿@if (User.Identity?.IsAuthenticated == true)
+﻿@using ODK.Services.Authentication
+@if (User.Identity?.IsAuthenticated == true)
 {
     <div class="account-links">
         <div class="dropdown">
@@ -6,13 +7,38 @@
                 <i class="fas fa-user"></i>
             </div>
             <div class="dropdown-menu dropdown-menu-end">
-                <a class="dropdown-item" href="/Account">My profile</a>
+                <a class="dropdown-item dropdown-item--icon" href="/Account">
+                    <i class="fa-regular fa-user"></i>
+                    <span>My profile</span>
+                </a>
                 <a class="dropdown-item" href="/Groups">My groups</a>
+
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-theme-selector="dark">Dark mode</a>
-                <a class="dropdown-item" href="#" data-theme-selector="light">Light mode</a>
+
+                <a class="dropdown-item dropdown-item--icon" href="#" data-theme-selector="dark">
+                    <i class="fa-regular fa-moon"></i>
+                    <span>Dark mode</span>
+                </a>
+                <a class="dropdown-item dropdown-item--icon" href="#" data-theme-selector="light">
+                    <i class="fa-regular fa-sun"></i>
+                    <span>Light mode</span>
+                </a>
+
+                @if (User.IsInRole(OdkRoles.SuperAdmin))
+                {
+                    <div class="dropdown-divider"></div>
+
+                    <a class="dropdown-item dropdown-item--icon" href="/SuperAdmin">
+                        <i class="fa-solid fa-wrench"></i>
+                        <span>Site admin</span>
+                    </a>
+                }
+
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="/Account/Logout">Sign Out</a>
+                <a class="dropdown-item dropdown-item--icon" href="/Account/Logout">
+                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    <span>Sign Out</span>
+                </a>
             </div>
         </div>
     </div>
