--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
@@ -1,13 +1,13 @@
 ﻿@using ODK.Core.Logging
 @using ODK.Services.Logging
 @using ODK.Web.Common.Extensions
-@model ODK.Core.Chapters.Chapter
 @inject ILoggingService LoggingService
 @{
     var memberId = User.MemberId();
     var errors = await LoggingService.GetErrors(memberId, 1, 1000);
 }
 
+<h2>Error log</h2>
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
@@ -25,10 +25,10 @@
                 <td>@error.CreatedUtc.ToString("yyyy-MM-dd HH:mm:ss")</td>
                 <td>@error.ExceptionType</td>
                 <td>
-                    <a href="/@Model.Name/Admin/SuperAdmin/Errors/@error.Id">@error.ExceptionMessage</a>
+                    <a href="/SuperAdmin/Errors/@error.Id">@error.ExceptionMessage</a>
                 </td>
                 <td>
-                    <form method="post" action="/@Model.Name/Admin/SuperAdmin/Errors/@error.Id/Delete">
+                    <form method="post" action="/SuperAdmin/Errors/@error.Id/Delete">
                         @Html.AntiForgeryToken()
                         <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger">
                             <i class="fas fa-times"></i>
