--- a/ODK.Web.Razor/wwwroot/css/_dropdowns.scss
+++ b/ODK.Web.Razor/wwwroot/css/_dropdowns.scss
@@ -1,3 +1,9 @@
 ﻿.dropdown-menu-end {
     text-align: right;
 }
+
+.dropdown-item--icon {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
