--- a/ODK.Web.Razor/Views/Shared/Header/_AdminSubMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AdminSubMenu.cshtml
@@ -10,6 +10,7 @@
 @await Html.PartialAsync("Header/_Navbar", new NavbarViewModel
 {
     Breakpoint = "sm",
+    CssClass = "border-bottom border-dark",
     Color = "light",
     Compact = true,
     Fluid = true,
