--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
@@ -1,5 +1,7 @@
 ﻿@using ODK.Services.Authentication
-@if (User.Identity?.IsAuthenticated == true)
+@using ODK.Web.Common.Extensions
+
+@if (User.Authenticated())
 {
     <div class="account-links">
         <div class="dropdown">
