--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
@@ -7,7 +7,7 @@
     var settings = await SettingsService.GetSiteSettings();
 }
 
-<section class="mb-5">
+<section class="section--admin">
     <h2>Settings</h2>
     <form action="/SuperAdmin/Emails/Settings" method="post">
         @Html.AntiForgeryToken()
@@ -21,12 +21,12 @@
     </form>
 </section>
 
-<section class="mb-5">
+<section class="section--admin">
     <h2>Emails</h2>
     @await Html.PartialAsync("SuperAdmin/_EmailsTable")
 </section>
 
-<section>
+<section class="section--admin">
     <h3>Providers</h3>
     @await Html.PartialAsync("SuperAdmin/_EmailProviders")
 </section>
