--- a/ODK.Web.Razor/wwwroot/css/main.css
+++ b/ODK.Web.Razor/wwwroot/css/main.css
@@ -12025,6 +12025,9 @@ html[data-platform=odk] {
   --odk-forms-labels-font-weight: 700;
 }
 
+.form-inline {
+  display: flex;
+}
 .form-inline .form-group {
   margin-right: 1rem;
 }
@@ -12284,6 +12287,10 @@ html[data-platform=odk] {
 
 .section--dark .section--hero__content {
   color: #fff;
+}
+
+.section--admin {
+  margin-bottom: 3rem;
 }
 
 .sidebar-card {
