--- a/ODK.Web.Razor/Views/Shared/Footer/_HomeFooter.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Footer/_HomeFooter.cshtml
@@ -15,7 +15,7 @@
 }
 else
 {
-    @await Html.PartialAsync("Footer/_Footer", new FooterViewModel
+    @await Html.PartialAsync("Footer/_SiteFooter", new FooterViewModel
     {
         Chapter = null
     })
