--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
@@ -4,7 +4,7 @@
 @inject ISettingsService SettingsService
 @{
     var memberId = User.MemberId();        
-    var settings = await SettingsService.GetSiteSettings();
+    var settings = await SettingsService.GetSiteEmailSettings();
 }
 
 <section class="section--admin">
@@ -13,9 +13,10 @@
         @Html.AntiForgeryToken()
         @await Html.PartialAsync("SuperAdmin/_EmailSettingsForm", new SiteEmailSettingsViewModel
         {
-            FromEmailAddress = settings.DefaultFromEmailAddress,
-            FromEmailName = settings.DefaultFromEmailName,
-            Title = settings.DefaultEmailTitle
+            ContactEmailAddress = settings.ContactEmailAddress,
+            FromEmailAddress = settings.FromEmailAddress,
+            FromEmailName = settings.FromName,
+            Title = settings.Title
         })
         <button class="btn btn-primary" type="submit">Update</button>
     </form>
